# mown

./: .gitignore  .prettierignore  .prettierrc.json  LICENSE  README-EN.md  README.md  TAURI_BUILD.md  electron-builder.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/workflows/: build-release.yml  desktop.yml  soundcloud-download.yml  youtube-download.yml
app/: globals.css  layout.tsx  page.tsx
app/api/cookies/: route.ts
app/api/history/: route.ts
app/api/jobs/: route.ts
app/api/merge/: route.ts
app/api/settings/: route.ts
app/api/setup/: route.ts
app/history/: page.tsx
app/jobs/[id]/: page.tsx
app/merge/: page.tsx
app/sync-history/: page.tsx
components/: home-client.tsx  job-config-panel.tsx  job-status-badge.tsx  job-status-card.tsx  language-switcher.tsx  navbar.tsx  onboarding-wizard.tsx  repo-selector.tsx  token-input.tsx  video-preview-card.tsx
components/ui/: badge.tsx  button.tsx  calendar.tsx  chart.tsx  context-menu.tsx  dropdown-menu.tsx  field.tsx  input-group.tsx  item.tsx  navigation-menu.tsx  pagination.tsx  slider.tsx  switch.tsx
electron/: tsconfig.json
electron/src/: main.ts  preload.ts
hooks/: use-polling.ts
i18n/: request.ts  routing.ts
lib/: constants.ts  direct-download.yml  github.ts  mock-data.ts  settings.ts  snapshot.yml  store.ts  utils.ts  workflows.ts  youtube-download.yml
lib/peyda/: index.ts
messages/: en.json  fa.json
scripts/: prepare-tauri.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
types/: next-intl.d.ts
(+8 files in other folders)
