[package]
name = "app"
version = "1.0.0"
description = "Download manager powered by GitHub Actions"
authors = ["MrMeshky <meshky.yt@gmail.com>"]
license = "MIT"
repository = "https://github.com/Mr-Meshky/mown"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.0", features = ["devtools"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["process", "time", "macros"] }
portpicker = "0.1"
